# earmark

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  MVP_DEVELOPMENT_PLAN.md  PRODUCT_DESCRIPTION.md  README.md  docker-compose.dev.yml  docker-compose.yml  migrate.py  pyproject.toml  pyrightconfig.json  summary.py  sync_transactions.py  wireframes.html
.github/: SECURITY.md  branch-protection.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: README.md  ci.yml
api/tests/: __init__.py
development-phases/phase-1-infrastructure/: README.md
development-phases/phase-2-ledger-integration/: README.md
development-phases/phase-3-envelope-management/: README.md
development-phases/phase-4-csv-import/: README.md
docs/plans/: 2026-03-24-lunchflow-migration.md  (+3 more)
migrations/: 0001_initial.sql  0002_envelopes.sql  0003_envelope_withdrawals.sql  0003_round_up.sql  0004_envelope_goals.sql  0005_manual_accounts.sql  0006_envelope_withdrawals.sql
scripts/: bash.sh  clean-build.sh  dev.sh  prod.sh  test.sh
sync/: __main__.py  api.py  auth.py  client.py  config.py  db.py  dedup.py  migrations.py  models.py  server.py  sync.py
tests/: conftest.py  test_api.py  test_auth.py  test_client.py  test_db.py  test_dedup.py  test_migrations.py  test_splits.py  test_sync.py
web/: .env.example  .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+64 files in other folders)
