[project]
name = "budget-tool"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1,<1.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
